--- a/views/report_voucher.xml
+++ b/views/report_voucher.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 <data>
-<template id="report_voucher">
+<template id="report_voucher_document">
     <t t-call="report.external_layout">
         <div class="page">
-            <div class="row">
-                <div class="col-xs-5 col-xs-offset-7">
-                    <address t-field="o.partner_id"
-                        t-field-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}' />
-                    <span t-field="o.partner_id.document_number"/>
-                </div>
-            </div>
-
             <h2>
-		<span t-field="o.journal_id.name" />
+		<strong>Orden de Pago:</strong>
                 <span t-field="o.number"/>
             </h2>
 
             <div class="row mt32 mb32">
+                <div class="col-xs-3">
+		    <strong t-field="o.partner_id.name" />
+                    <address t-field="o.partner_id"
+                        t-field-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}' />
+		    <strong>CUIT</strong>
+                    <span t-field="o.partner_id.document_number"/>
+                </div>
                 <div class="col-xs-3" t-if="o.name">
                     <strong>Descripción:</strong>
                     <p t-field="o.name"/>
                 </div>
-                <div class="col-xs-3" t-if="o.date_invoice">
+
+                <div class="col-xs-3" t-if="o.journal_id.name">
+                    <strong>Método de pago:</strong>
+                    <p t-field="o.journal_id.name"/>
+                </div>
+                <div class="col-xs-3" t-if="o.date">
                     <strong>Fecha Pago:</strong>
                     <p t-field="o.date"/>
                 </div>
@@ -34,71 +38,76 @@
                     <strong>Memoria:</strong>
                     <p t-field="o.name"/>
                 </div>
-                <div class="col-xs-3" t-if="o.partner_id.ref">
-                    <strong>Código Cliente:</strong>
-                    <p t-field="o.partner_id.ref"/>
-                </div>
             </div>
+            <div class="row mt32 mb32">
+		<br />
+		<p>En pago de los conceptos y en la forma en la que se detalla:</p>
+	    </div>
 
-		<!-- 
             <table class="table table-condensed">
                 <thead>
                     <tr>
-                        <th>Descripción</th>
-                        <th>Cantidad</th>
-                        <th class="text-right">Precio Unitario</th>
-                        <th class="text-right" groups="sale.group_discount_per_so_line">Descuento (%)</th>
-                        <th class="text-right">IVA</th>
+                        <th>Comprobante</th>
+                        <th>Fecha</th>
+                        <th class="text-right">Monto Original</th>
                         <th class="text-right">Monto</th>
                     </tr>
                 </thead>
-                <tbody class="invoice_tbody">
-                    <tr t-foreach="o.invoice_line" t-as="l">
-                        <td><span t-field="l.name"/></td>
-                        <td>
-                            <span t-field="l.quantity"/>
-                            <span t-field="l.uos_id"  groups="product.group_uom"/>
+                <tbody class="voucher_tbody">
+                    <tr t-foreach="o.line_ids" t-as="l">
+                        <td><span t-field="l.move_line_id.name"/></td>
+                        <td><span t-field="l.date_original"/></td>
+                        <td class="text-right">
+                            <span t-field="l.amount_original">$</span>
                         </td>
                         <td class="text-right">
-                            <span t-field="l.price_unit"/>
-                        </td>
-                        <td groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
-                        <td class="text-right">
-                            <span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
-                        </td>
-                        <td class="text-right">
-                            <span t-field="l.price_subtotal" 
-                                t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                            <span t-field="l.amount">$</span>
                         </td>
                     </tr>
                 </tbody>
             </table>
-
+	
             <div class="row">
                 <div class="col-xs-4 pull-right">
                     <table class="table table-condensed">
                         <tr class="border-black">
-                            <td><strong>Total sin Impuestos</strong></td>
+                            <td><strong>Total pagado</strong></td>
                             <td class="text-right">
-                                <span t-field="o.amount_untaxed" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>IVA</td>
-                            <td class="text-right">
-                                <span t-field="o.amount_tax" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
-                            </td>
-                        </tr>
-                        <tr class="border-black">
-                            <td><strong>Total</strong></td>
-                            <td class="text-right">
-                                 <span t-field="o.amount_total" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                                 <span t-field="o.amount" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
                     </table>
                 </div>
             </div>
 
+            <div class="row" t-if="o.received_third_check_ids">
+                <div class="col-xs-6">
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th>Cheque</th>
+                                <th class="text-left">Banco</th>
+                                <th class="text-right">Fecha</th>
+                                <th class="text-right">Importe</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr t-foreach="o.received_third_check_ids" t-as="t">
+                                <td><span t-field="t.number"/></td>
+                                <td><span t-field="t.bank_id.name"/></td>
+                                <td class="text-right">
+                                    <span t-field="t.issue_date" />
+                                </td>
+                                <td class="text-right">
+                                    <span t-field="t.amount"
+                                        t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+	     </div>
+	<!--
             <div class="row" t-if="o.tax_line">
                 <div class="col-xs-6">
                     <table class="table table-condensed">
@@ -133,7 +142,7 @@
 <template id="report_voucher">
     <t t-call="report.html_container">
         <t t-foreach="doc_ids" t-as="doc_id">
-            <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'l10nar_account_voucher_receipt.report_voucher')"/>
+            <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'l10nar_account_voucher_receipt.report_voucher_document')"/>
         </t>
     </t>
 </template>
