--- a/views/report_voucher.xml
+++ b/views/report_voucher.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 <data>
-<template id="report_voucher_document">
+<template id="report_voucher_document_tmpl">
     <t t-call="report.external_layout">
         <div class="page">
             <h2>
@@ -38,6 +38,10 @@
                     <strong>Memoria:</strong>
                     <p t-field="o.name"/>
                 </div>
+                <div class="col-xs-3" t-if="o.partner_id.debit">
+                    <strong>Saldo</strong>
+                    <p t-field="o.partner_id.debit"/>
+                </div>
             </div>
             <div class="row mt32 mb32">
 		<br />
@@ -47,10 +51,10 @@
             <table class="table table-condensed">
                 <thead>
                     <tr>
-                        <th>Comprobante</th>
-                        <th>Fecha</th>
-                        <th class="text-right">Monto Original</th>
-                        <th class="text-right">Monto</th>
+                        <th>Factura del proveedor</th>
+                        <th>Fecha factura del proveedor</th>
+                        <th class="text-right">Monto Factura Proveedor</th>
+                        <th class="text-right">Monto Pagado</th>
                     </tr>
                 </thead>
                 <tbody class="voucher_tbody">
@@ -80,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="row" t-if="o.received_third_check_ids">
+            <div class="row" t-if="o.delivered_third_check_ids">
                 <div class="col-xs-6">
                     <table class="table table-condensed">
                         <thead>
@@ -92,7 +96,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr t-foreach="o.received_third_check_ids" t-as="t">
+                            <tr t-foreach="o.delivered_third_check_ids" t-as="t">
                                 <td><span t-field="t.number"/></td>
                                 <td><span t-field="t.bank_id.name"/></td>
                                 <td class="text-right">
@@ -142,7 +146,7 @@
 <template id="report_voucher">
     <t t-call="report.html_container">
         <t t-foreach="doc_ids" t-as="doc_id">
-            <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'l10nar_account_voucher_receipt.report_voucher_document')"/>
+            <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'l10nar_account_voucher_receipt.report_voucher_document_tmpl')"/>
         </t>
     </t>
 </template>
